# django-paradedb

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  api.json  api.json5  apiignore.json  apiignore.json5  design-doc.md  manage.py  pending.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check-typo.yml  ci.yml  compat-check.yml  create-github-release.yml  lint-bash.yml  lint-format.yml  lint-markdown.yml  lint-yaml.yml  publish-pypi.yml  release.yml  schema-compat.yml
docs/getting-started/: installation.md
examples/: README.md  _common.py  autocomplete.py  autocomplete_setup.py  common.py  faceted_search.py  hybrid_rrf.py  hybrid_rrf_setup.py  more_like_this.py  quickstart.py  rag.py  rag_ollama.py  requirements.txt
examples/autocomplete/: autocomplete.py  models.py  setup.py
examples/faceted_search/: faceted_search.py
examples/hybrid_rrf/: README.md  example.py  hybrid_rrf.py  setup.py
examples/more_like_this/: README.md  example.py  more_like_this.py
examples/quickstart/: README.md  example.py  quickstart.py
examples/rag/: rag.py  requirements.txt
examples/rag_ollama/: README.md  example.py
paradedb/: __init__.py  api.py  api.pyi  functions.py  indexes.py  queryset.py  search.py
paradedb/management/: __init__.py
paradedb/management/commands/: __init__.py  paradedb_index_segments.py  paradedb_verify_all_indexes.py
scripts/: build_docs.sh  check_api_coverage.py  check_api_stub_sync.py  check_schema_compat.py  paradedb_env.sh  run_examples.sh  run_integration_tests.sh  run_paradedb.sh  run_tests.sh  run_unit_tests.sh  smoke_wheel_install.sh
src/paradedb/: __init__.py  api.py  api.pyi  functions.py  indexes.py  queryset.py  search.py
src/paradedb/management/: __init__.py
tests/: _db_config.py  apps.py  conftest.py  models.py  settings.py  test_advanced_orm_integration.py  test_aggregations.py  test_api_loading.py  test_diagnostics.py  test_diagnostics_integration.py  test_django_orm_integration.py  test_edge_cases.py  test_error_handling.py  test_facets.py  test_facets_integration.py  test_fast_fields.py  test_index_validation.py  test_indexing.py  test_migrations_integration.py  test_paradedb_queries.py  test_paradedb_smoke.py  test_queries.py  test_query_and_index_edge_cases.py  test_queryset_facets.py  test_snippet_functions.py  test_sql_generation.py  test_sql_generation_queries.py  test_window_functions.py  urls.py
tests/__snapshots__/: test_sql_generation.ambr
tests/integration/: conftest.py  test_advanced_orm_integration.py  test_aggregations.py  test_diagnostics_integration.py  test_django_orm_integration.py  test_error_handling.py  test_facets_integration.py  test_index_validation_integration.py  test_json_facets_integration.py  test_migrations_integration.py  test_paradedb_queries.py  test_paradedb_smoke.py  test_snippet_functions.py  test_window_functions.py
tests/migrations/: 0001_initial.py
tests/templates/tests/: search.html
(+4 files in other folders)
